# csv2serde

./: .gitignore  Cargo.toml  LICENSE  README.md  main.rs
src/: codegen.rs  error.rs  field.rs  keywords.rs  lib.rs  main.rs  type_parser.rs
src/codegen/: styling.rs
src/main/: reader_source.rs  write_destination.rs
