[package]
name = "csv2serde"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
convert_case = "0.6.0"
csv = "1.2.2"
thiserror = "1.0.44"

[[bin]]
name = "csv2serde"
path = "main.rs"
