[package]
name = "csv2serde"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
convert_case = "0.6.0"
csv = "1.2.2"
phf = { version = "0.11.2", features = ["macros"] }
thiserror = "1.0.44"
