[package]
name = "csv2serde"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
convert_case = "0.6.0"
csv = "1.2.2"
phf = { version = "0.11.2", features = ["macros"] }
prettyplease = "0.2.16"
proc-macro2 = "1.0.78"
quote = "1.0.35"
syn = "2.0.48"
thiserror = "1.0.44"

[dev-dependencies]
indoc = "2.0.4"
